--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <script src='./main.js'></script>
 </head>
 
-<body>
+<body class="bg-custom-100">
     <nav class="relative select-none bg-grey lg:flex lg:items-stretch w-full bg-black">
         <div class="lg:flex lg:items-stretch lg:justify-end ml-auto">
             <div class="flex flex-no-shrink items-stretch h-12">
@@ -26,34 +26,33 @@
 
     <div class="grid-template-rows-2 h-screen w-11/12 mx-auto">
         <div class="grid grid-template-cols-6 h-2/4">
-
             <div class="col-start-1 col-end-5 flex">
                 <img class="h-56 max-h-full md:max-h-screen mt-auto ml-auto" src="./images/whatthis.png" alt="https://pbs.twimg.com/profile_images/1339174370661584902/9MJH6FNt_400x400.jpg">
             </div>
 
             <div class="col-start-5 col-end-6 inline-block align-text-bottom flex">
-                <span class="mt-auto ml-6">
+                <span class="mt-auto ml-6 mb-4">
                      <strong> ¡Hello! I'm Miguel,</strong> 
                 a Software Developer who is always learning programming, languages</span>
             </div>
         </div>
 
-        <div class="flex justify-around h-1/6 pt-4">
+        <div class="flex justify-around h-1/6 sm:pt-8 md:pt-6 pt-9 shadow-2xl" style="box-shadow: -1px -1px 5px 2px #000000;">
             <div>
                 <a target="blank" href="https://twitter.com/MiguelHinkpie">
-                    <img class="h-16 max-h-full md:max-h-screen" src="./images/twitter_icon.png" alt="">
+                    <img class="h-16 max-h-full md:max-h-screen" src="./images/twitter_icon.png" alt="Twitter">
                 </a>
             </div>
 
             <div>
                 <a target="blank" href="https://github.com/mahc30">
-                    <img class="h-16 max-h-full md:max-h-screen" src="./images/github_icon.png" alt="">
+                    <img class="h-16 max-h-full md:max-h-screen" src="./images/github_icon.png" alt="GitHub">
                 </a>
             </div>
 
             <div>
                 <a href="./contact.html">
-                    <img class="h-16 max-h-full md:max-h-screen" src="./images/email_icon.png" alt="">
+                    <img class="h-16 max-h-full md:max-h-screen" src="./images/email_icon.png" alt="¡Send me an Email!">
                 </a>
             </div>
         </div>
