Intro looking ok

--- a/public/index.html
+++ b/public/index.html
@@ -24,33 +24,39 @@
         </div>
     </nav>
 
-    <div class="grid-template-rows-2 h-screen w-11/12 mx-auto">
+    <div class="grid-template-rows-2 max-h-screen h-screen w-11/12 mx-auto">
         <div class="grid grid-template-cols-6 h-2/4">
-            <div class="col-start-1 col-end-5 flex">
-                <img class="h-56 max-h-full md:max-h-screen mt-auto ml-auto" src="./images/whatthis.png" alt="https://pbs.twimg.com/profile_images/1339174370661584902/9MJH6FNt_400x400.jpg">
+            <div class="col-start-1 sm:col-end-5 md:col-end-4 flex">
+                <img class="h-4/6 max-h-40 md:max-h-48 mt-auto ml-auto" src="./images/whatthis.png" alt="https://pbs.twimg.com/profile_images/1339174370661584902/9MJH6FNt_400x400.jpg">
             </div>
 
-            <div class="col-start-5 col-end-6 inline-block align-text-bottom flex">
+            <div class="sm:col-start-5 md:col-start-4 col-end-6 align-text-bottom flex">
                 <span class="mt-auto ml-6 mb-4">
                      <strong> ¡Hello! I'm Miguel,</strong> 
                 a Software Developer who is always learning programming, languages</span>
             </div>
         </div>
 
-        <div class="flex justify-around h-1/6 sm:pt-8 md:pt-6 pt-9 shadow-2xl" style="box-shadow: -1px -1px 5px 2px #000000;">
-            <div>
+        <div class="flex justify-around max-h-20 md:max-h-24 h-1/6 sm:h-1/5 shadow-2xl xl:w-5/6 mx-auto" style="box-shadow: -1px -1px 5px 2px #000000;">
+            <div class="my-auto">
+                <a target="blank" href="https://www.linkedin.com/in/miguel-hincapie-b970ab17a/">
+                    <img class="h-16 max-h-full md:max-h-screen" src="./images/linkedin_icon.png" alt="LinkedIn">
+                </a>
+            </div>
+
+            <div class="my-auto">
                 <a target="blank" href="https://twitter.com/MiguelHinkpie">
                     <img class="h-16 max-h-full md:max-h-screen" src="./images/twitter_icon.png" alt="Twitter">
                 </a>
             </div>
 
-            <div>
+            <div class="my-auto">
                 <a target="blank" href="https://github.com/mahc30">
                     <img class="h-16 max-h-full md:max-h-screen" src="./images/github_icon.png" alt="GitHub">
                 </a>
             </div>
 
-            <div>
+            <div class="my-auto">
                 <a href="./contact.html">
                     <img class="h-16 max-h-full md:max-h-screen" src="./images/email_icon.png" alt="¡Send me an Email!">
                 </a>
