Enhanced intro pic

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <script src='./main.js'></script>
 </head>
 
-<body class="bg-custom-100 overflow-x-hidden">
+<body class="bg-custom-100">
     <nav class="relative select-none bg-grey lg:flex lg:items-stretch w-full bg-black">
         <div class="lg:flex lg:items-stretch lg:justify-end ml-auto">
             <div class="flex flex-no-shrink items-stretch h-12">
@@ -28,7 +28,7 @@
         <div class="grid-template-rows-2 max-h-screen h-screen w-11/12 mx-auto">
             <div class="grid grid-template-cols-6 h-2/4">
                 <div class="col-start-1 sm:col-end-5 md:col-end-4 flex">
-                    <img class="h-4/6 max-h-48  2xl:max-h-56 md:max-h-48 mt-auto ml-auto" src="./images/whatthis.png" alt="https://pbs.twimg.com/profile_images/1339174370661584902/9MJH6FNt_400x400.jpg">
+                    <img class="h-4/6 max-h-48  2xl:max-h-56 md:max-h-48 mt-auto ml-auto" src="./images/picretocada.png" alt="https://pbs.twimg.com/profile_images/1339174370661584902/9MJH6FNt_400x400.jpg">
                 </div>
 
                 <div class="sm:col-start-5 md:col-start-4 col-end-6 align-text-bottom flex">
