--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Welcome</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <meta name="description" content="Miguel Hincapié's Software Developer Portfolio, focused primarily in full stack web development">
     <link rel='stylesheet' type='text/css' media='screen' href='./css/style.css'>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <script src='./js/main.js'></script>
 </head>
 
-<body class="bg-custom-200">
-    <nav class="relative select-none bg-grey lg:flex lg:items-stretch w-full bg-black">
+<body class="bg-custom-200 font-custom">
+    <nav id="navbar" class="relative select-none bg-grey lg:flex lg:items-stretch w-full">
         <div class="lg:flex lg:items-stretch lg:justify-end ml-auto">
             <div class="flex flex-no-shrink items-stretch h-12">
-                <a class="flex-no-grow flex-no-shrink relative py-2 px-4 leading-normal text-white no-underline flex items-center hover:bg-grey-dark" href="">About Me</a>
-                <a class="flex-no-grow flex-no-shrink relative py-2 px-4 leading-normal text-white no-underline flex items-center hover:bg-grey-dark" href="./contact.html">Contact</a>
+                <button class="flex-no-grow flex-no-shrink relative py-2 px-4 leading-normal text-white flex items-center hover:bg-grey-dark">
+                   <a class="underline font-semibold" href="./aboutMe.html"> About Me </a> </button>
+                <button onclick="smoothScroll(document.getElementById('contact'))" class="flex-no-grow flex-no-shrink relative py-2 px-4 leading-normal text-white flex items-center hover:bg-grey-dark" href="./contact.html">
+                   <span class="underline font-semibold"> Contact </span></button>
             </div>
 
         </div>
@@ -31,9 +34,8 @@
                 </div>
 
                 <div class="col-start-5 sm:col-start-4 col-end-6 align-text-bottom flex">
-                    <span class="mt-auto ml-6 mb-4">
-                     <strong> ¡Hello! I'm Miguel,</strong> 
-                an autodidact Software Developer who loves learning programming<strong>,</strong> languages.</span>
+                    <h6 class="mt-auto ml-6 mb-4">
+                        <strong> ¡Hello! I'm Miguel,</strong> an autodidact Software Developer who loves learning programming<strong>,</strong> languages.</h6>
                 </div>
             </div>
 
@@ -73,45 +75,45 @@
             <h1 class="font-bold underline text-2xl"> This is what i do </h1>
 
             <div class="grid grid-cols-1 lg:grid-cols-2 2xl:grid-cols-3 gap-8 w-3/4 mx-auto">
-                <div class="mx-auto shadow-lg my-4 rounded-sm bg-custom-100">
-                    <div class="my-2 text-center">
-                        <h4 class="font-bold text-lg">Management of Hospitalary Assets</h4>
+                <div class="mx-auto shadow-lg my-4 rounded-sm bg-custom-100 border-4 border-gray-700">
+                    <div class="mt-2 text-center border-b-2 border-black py-3">
+                        <h2 class="font-bold text-lg">Management of Hospitalary Assets</h2>
                     </div>
-                    <div class="my-2">
+                    <div>
                         <img class="max-h-48 md:max-h-64 2xl:max-h-56 mx-auto w-full" src="./images/statistics_1.jpg" alt="Statistics graphics image">
                     </div>
 
-                    <div class="text my-6 px-2 text-center">
+                    <div class="text my-8 align-middle px-2 text-center">
                         <p>
                             Web Application to conduct research on the current state of Hospital Physical Asset Management in the Aburrá Valley (Colombia) as part of a research on the Efficiency and Sustainability of Physical Asset Maintenance Management in the Hospital environment.
                         </p>
                     </div>
                 </div>
 
-                <div class="mx-auto shadow-lg my-4 rounded-sm bg-custom-100">
-                    <div class="my-2 text-center">
-                        <h4 class="font-bold text-lg">Music Sheet Database</h4>
+                <div class="mx-auto shadow-lg my-4 rounded-sm bg-custom-100 border-4 border-gray-700">
+                    <div class="mt-2 text-center border-b-2 border-black py-3">
+                        <h2 class="font-bold text-lg">Music Sheet Database</h2>
                     </div>
-                    <div class="my-2">
+                    <div>
                         <a href="https://github.com/mahc30/staferep">
                             <img class="max-h-48 md:max-h-64 2xl:max-h-56 mx-auto w-full" src="./images/music_sheet_1.jpg" alt="Woman reading music sheet">
                         </a>
                     </div>
-                    <div class="text my-6 px-2 text-center">
+                    <div class="text my-8 align-middle px-2 text-center">
                         <p>Web Application to manage, upload and download curated music sheets for the use of the students of the Red de Escuelas de Música de Medellín.</p>
                     </div>
                 </div>
 
-                <div class="mx-auto shadow-lg my-4 rounded-sm bg-custom-100">
-                    <div class="my-2 text-center">
-                        <h4 class="font-bold text-lg">Education Clusters Analysis</h4>
+                <div class="mx-auto shadow-lg my-4 rounded-sm bg-custom-100 border-4 border-gray-700">
+                    <div class="mt-2 text-center border-b-2 border-black py-3">
+                        <h2 class="font-bold text-lg">Education Clusters Analysis</h2>
                     </div>
-                    <div class="my-2">
+                    <div>
                         <a href="https://github.com/mahc30/cluster-investigation-analysis">
                             <img class="max-h-48 md:max-h-64 2xl:max-h-56 mx-auto w-full" src="./images/cluster_1.png" alt="Education Clusters Representation">
                         </a>
                     </div>
-                    <div class="text my-6 px-2 text-center">
+                    <div class="text my-8 align-middle px-2 text-center">
                         <p>Statistic Analysis of posible education focuses for the creation of a city wide studies plan amid covid19 pandemic economic recovery efforts.</p>
                     </div>
                 </div>
@@ -125,15 +127,15 @@
             <h1 class="font-bold underline text-2xl"> Experience </h1>
 
             <div class="grid grid-cols-1 lg:grid-cols-2 2xl:grid-cols-3 gap-8 w-3/4 mx-auto">
-                <div class="mx-auto shadow-lg my-4 rounded-sm bg-custom-100">
-                    <div class="my-2 text-center">
-                        <h4 class="font-bold text-lg"> Operative Systems Course Teaching Assistant </h4>
+                <div class="mx-auto shadow-lg my-4 rounded-sm bg-custom-100 border-4 border-gray-700">
+                    <div class="mt-2 text-center border-b-2 border-black py-3">
+                        <h4 class="font-bold text-lg"> Operating Systems Course Teaching Assistant </h4>
                     </div>
-                    <div class="my-2">
+                    <div>
                         <img class="max-h-48 md:max-h-64 2xl:max-h-56 mx-auto w-full" src="./images/linux_icon.png" alt="Tux picture">
                     </div>
 
-                    <div class="text my-6 px-2 text-center">
+                    <div class="text my-8 align-middle px-2 text-center">
                         <strong>2021 - ?</strong>
                         <p>
                             Helped students of the course Operating Systems (CS401) by reviewing and providing feedback to students questions and programs written in C and transpiling code examples to Rust and C++
@@ -151,33 +153,33 @@
 
 
             <div class="grid grid-cols-1 lg:grid-cols-2 2xl:grid-cols-3 gap-8 w-3/4 mx-auto">
-                <div class="mx-auto my-4 rounded-sm h-full bg-custom-100 shadow-xl">
-                    <div class="my-2 text-center">
+                <div class="mx-auto my-4 rounded-sm h-full bg-custom-100 shadow-xl border-4 border-gray-700">
+                    <div class="mt-2 text-center border-b-2 border-black py-3">
                         <h4 class="font-bold text-lg"> Computer Science Major </h4>
                     </div>
-                    <div class="my-2">
+                    <div>
                         <img class="max-h-48 md:max-h-64 2xl:max-h-56 mx-auto w-11/12 h-40" src="./images/upb_logo.png" alt="UPB logo">
                     </div>
 
-                    <div class="text my-6 px-2 text-center">
+                    <div class="text my-8 align-middle px-2 text-center">
                         <p>
                             Computer Science Major from Universidad Pontificia Bolivariana, graduated in 2022 with the title 'Ingeniero de Sistemas e Informática'.
                         </p>
                     </div>
                 </div>
 
-                <div class="mx-auto my-4 rounded-sm h-full bg-custom-100 shadow-xl">
-                    <div class="my-2 text-center">
+                <div class="mx-auto my-4 rounded-sm h-full bg-custom-100 shadow-xl border-4 border-gray-700">
+                    <div class="mt-2 text-center border-b-2 border-black py-3">
                         <h4 class="font-bold text-lg"> Coursera </h4>
                     </div>
-                    <div class="my-2">
+                    <div>
                         <img class="max-h-48 md:max-h-64 2xl:max-h-56 mx-auto w-full h-40" src="./images/coursera_logo.png" alt="UPB logo">
                     </div>
 
-                    <div class="text my-6 px-2 text-center">
+                    <div class="text my-8 align-middle px-2 text-center">
                         <p>
                             Studied different topics such as Cloud Engineering, Network & Databases Vulnerabilities and Software Security. You can see my certificates in my
-                            <a class="underline font-bold" target="blank" href="https://www.linkedin.com/in/miguel-hincapie-b970ab17a/">linkedIn profile</a>.
+                            <a class="underline font-bold" target="blank" href="https://www.linkedin.com/in/miguel-hincapie-b970ab17a/">Linkedln profile</a>.
                         </p>
                     </div>
                 </div>
@@ -201,10 +203,10 @@
                     <li>C</li>
                     <li>C++</li>
                     <li>Python</li>
+                    <li>SQL</li>
 
                 </ul>
                 <ul class="list-disc list-inside mx-auto my-auto">
-                    <li>SQL</li>
                     <li>NoSQL</li>
                     <li>Git</li>
                     <li>CLI</li>
@@ -232,8 +234,8 @@
     <section id="contact">
         <div class="mx-auto w-11/12">
 
-            <form action="POST" class="mx-auto my-4 rounded-sm h-full bg-custom-100 shadow-custom-1 w-1/2 px-6 py-4">
-                <h1 class="font-bold text-4xl my-8"> Contact Me </h1>
+            <form action="POST" class="mx-auto my-4 rounded-sm h-full bg-custom-100 shadow-custom-1 sm:w-3/4 md:w-1/2 2xl:w-2/5 px-6 py-4">
+                <h1 class="font-bold text-4xl my-8 underline"> Contact Me </h1>
 
                 <div class="w-3/4">
                     <label class="label mb-0 pt-4 pl-3 leading-tighter text-gray-900 text-base mt-2 cursor-text" for="name">Name</label>
@@ -252,10 +254,16 @@
                     <input class="input h-36 border border-gray-400 appearance-none rounded w-full px-3 py-3 pt-5 pb-2 focus focus:border-indigo-600 focus:outline-none active:outline-none active:border-indigo-600" id="message" type="text" />
                 </div>
 
-                <button class="my-4 bg-custom-600 hover:bg-blue-dark text-white font-bold py-3 px-6 rounded w-1/2 md:w-1/4 h-3/5">Submit</button>
+                <button class="my-4 bg-indigo-800 border-2 border-indigo-900 hover:bg-blue-dark text-white font-bold py-3 px-6 rounded w-1/2 md:w-1/4 h-3/5">Submit</button>
             </form>
         </div>
     </section>
+
+    <button onclick="smoothScroll(document.getElementById('navbar'))" class="float-right mr-28 -mt-36 rounded-full invisible xl:visible">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="h-24">
+            <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-8.707l-3-3a1 1 0 00-1.414 0l-3 3a1 1 0 001.414 1.414L9 9.414V13a1 1 0 102 0V9.414l1.293 1.293a1 1 0 001.414-1.414z" clip-rule="evenodd" />
+          </svg>
+    </button>
 </body>
 
 </html>
