--- a/index.html
+++ b/index.html
@@ -8,18 +8,19 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <meta name="description" content="Miguel Hincapié's Software Developer Portfolio, focused primarily in full stack web development">
     <link rel='stylesheet' type='text/css' media='screen' href='./css/style.css'>
-    <script src='./js/main.js'></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <script src='./js/main.js'></script>
+    <script src='./js/emailAPI.js'></script>
 </head>
 
-<body class="bg-custom-200 font-custom">
+<body class="bg-custom-800 font-custom">
     <nav id="navbar" class="relative select-none bg-grey lg:flex lg:items-stretch w-full">
         <div class="lg:flex lg:items-stretch lg:justify-end ml-auto">
             <div class="flex flex-no-shrink items-stretch h-12">
-                <button class="flex-no-grow flex-no-shrink relative py-2 px-4 leading-normal text-white flex items-center hover:bg-grey-dark">
+                <button class="flex-no-grow flex-no-shrink relative py-2 px-4 leading-normal text-gray-600 flex items-center hover:bg-grey-dark">
                    <a class="underline font-semibold" href="./aboutMe.html"> About Me </a> </button>
-                <button onclick="smoothScroll(document.getElementById('contact'))" class="flex-no-grow flex-no-shrink relative py-2 px-4 leading-normal text-white flex items-center hover:bg-grey-dark" href="./contact.html">
+                <button onclick="smoothScroll(document.getElementById('contact'))" class="flex-no-grow flex-no-shrink relative py-2 px-4 leading-normal text-gray-600 flex items-center hover:bg-grey-dark" href="./contact.html">
                    <span class="underline font-semibold"> Contact </span></button>
             </div>
 
@@ -30,7 +31,7 @@
         <div class="grid-template-rows-2 max-h-screen h-screen w-11/12 mx-auto">
             <div class="grid grid-template-cols-6 h-2/4">
                 <div class="col-start-1 col-end-5 sm:col-end-4 flex">
-                    <img class="h-4/6 max-h-48  2xl:max-h-56 md:max-h-48 mt-auto ml-auto" src="./images/picretocada.png" alt="https://pbs.twimg.com/profile_images/1339174370661584902/9MJH6FNt_400x400.jpg">
+                    <img class="h-4/6 max-h-48 2xl:max-h-56 md:max-h-48 mt-auto ml-auto" src="./images/picretocada.png" alt="https://pbs.twimg.com/profile_images/1339174370661584902/9MJH6FNt_400x400.jpg">
                 </div>
 
                 <div class="col-start-5 sm:col-start-4 col-end-6 align-text-bottom flex">
@@ -39,35 +40,31 @@
                 </div>
             </div>
 
-            <div class="flex justify-around max-h-20 md:max-h-24 h-1/6 sm:h-1/5 shadow-custom-1 xl:w-5/6 mx-auto bg-custom-100">
+            <div class="flex justify-around max-h-20 md:max-h-24 h-1/6 sm:h-1/5 shadow-custom-1 xl:w-5/6 mx-auto bg-custom-600 px-28 sm:px-32 md:px-48 lg:px-64 xl:px-80 2xl:px-96">
                 <div class="my-auto">
                     <a target="blank" href="https://www.linkedin.com/in/miguel-hincapie-b970ab17a/">
-                        <img class="h-16 max-h-full md:max-h-screen" src="./images/linkedin_icon.png" alt="LinkedIn">
-                    </a>
-                </div>
-
-                <div class="my-auto">
-                    <a target="blank" href="https://twitter.com/MiguelHinkpie">
-                        <img class="h-16 max-h-full md:max-h-screen" src="./images/twitter_icon.png" alt="Twitter">
+                        <img class="h-14 sm:h-16 max-h-full md:max-h-screen" src="./images/linkedin_icon.png" alt="LinkedIn">
                     </a>
                 </div>
 
                 <div class="my-auto">
                     <a target="blank" href="https://github.com/mahc30">
-                        <img class="h-16 max-h-full md:max-h-screen" src="./images/github_icon.png" alt="GitHub">
+                        <img class="h-14 sm:h-16 max-h-full md:max-h-screen" src="./images/github_icon.png" alt="GitHub">
                     </a>
                 </div>
 
                 <div class="my-auto">
-                    <a href="./contact.html">
-                        <img class="h-16 max-h-full md:max-h-screen" src="./images/email_icon.png" alt="¡Send me an Email!">
+                    <a target="blank" href="https://twitter.com/MiguelHinkpie">
+                        <img class="h-14 sm:h-16 max-h-full md:max-h-screen" src="./images/twitter_icon.png" alt="Twitter">
                     </a>
                 </div>
+
+
             </div>
         </div>
 
 
-        <div id="decoration" class="w-full h-24 max-h-24 absolute -mt-48 2xl:-mt-28 bg-repeat-x opacity-50 " style="background-image: url(./images/separador_1.png); background-size: contain;"></div>
+        <div id="decoration" class="w-full h-24 max-h-24 absolute -mt-48 2xl:-mt-28 bg-repeat-x opacity-50 " style="background-image: url(./images/separador_2.png); background-size: contain;"></div>
     </section>
 
     <section id="projects-and-stuff">
@@ -75,12 +72,12 @@
             <h1 class="font-bold underline text-2xl"> This is what i do </h1>
 
             <div class="grid grid-cols-1 lg:grid-cols-2 2xl:grid-cols-3 gap-8 w-3/4 mx-auto">
-                <div class="mx-auto shadow-lg my-4 rounded-sm bg-custom-100 border-4 border-gray-700">
+                <div class="mx-auto shadow-lg my-4 rounded-sm bg-custom-600 border-4 border-gray-700">
                     <div class="mt-2 text-center border-b-2 border-black py-3">
                         <h2 class="font-bold text-lg">Management of Hospitalary Assets</h2>
                     </div>
                     <div>
-                        <img class="max-h-48 md:max-h-64 2xl:max-h-56 mx-auto w-full" src="./images/statistics_1.jpg" alt="Statistics graphics image">
+                        <img class="max-h-48 md:max-h-64 2xl:max-h-56 md:w-11/12 sm:w-full lg:w-full mx-auto" src="./images/statistics_1.jpg" alt="Statistics graphics image">
                     </div>
 
                     <div class="text my-8 align-middle px-2 text-center">
@@ -90,13 +87,13 @@
                     </div>
                 </div>
 
-                <div class="mx-auto shadow-lg my-4 rounded-sm bg-custom-100 border-4 border-gray-700">
+                <div class="mx-auto shadow-lg my-4 rounded-sm bg-custom-600 border-4 border-gray-700">
                     <div class="mt-2 text-center border-b-2 border-black py-3">
                         <h2 class="font-bold text-lg">Music Sheet Database</h2>
                     </div>
                     <div>
                         <a href="https://github.com/mahc30/staferep">
-                            <img class="max-h-48 md:max-h-64 2xl:max-h-56 mx-auto w-full" src="./images/music_sheet_1.jpg" alt="Woman reading music sheet">
+                            <img class="max-h-48 md:max-h-64 2xl:max-h-56 md:w-11/12 sm:w-full lg:w-full mx-auto" src="./images/music_sheet_1.jpg" alt="Woman reading music sheet">
                         </a>
                     </div>
                     <div class="text my-8 align-middle px-2 text-center">
@@ -104,13 +101,13 @@
                     </div>
                 </div>
 
-                <div class="mx-auto shadow-lg my-4 rounded-sm bg-custom-100 border-4 border-gray-700">
+                <div class="mx-auto shadow-lg my-4 rounded-sm bg-custom-600 border-4 border-gray-700">
                     <div class="mt-2 text-center border-b-2 border-black py-3">
                         <h2 class="font-bold text-lg">Education Clusters Analysis</h2>
                     </div>
                     <div>
                         <a href="https://github.com/mahc30/cluster-investigation-analysis">
-                            <img class="max-h-48 md:max-h-64 2xl:max-h-56 mx-auto w-full" src="./images/cluster_1.png" alt="Education Clusters Representation">
+                            <img class="max-h-48 md:max-h-64 2xl:max-h-56 md:w-11/12 sm:w-full lg:w-full mx-auto" src="./images/cluster_1.png" alt="Education Clusters Representation">
                         </a>
                     </div>
                     <div class="text my-8 align-middle px-2 text-center">
@@ -127,7 +124,7 @@
             <h1 class="font-bold underline text-2xl"> Experience </h1>
 
             <div class="grid grid-cols-1 lg:grid-cols-2 2xl:grid-cols-3 gap-8 w-3/4 mx-auto">
-                <div class="mx-auto shadow-lg my-4 rounded-sm bg-custom-100 border-4 border-gray-700">
+                <div class="mx-auto shadow-lg my-4 rounded-sm bg-custom-600 border-4 border-gray-700">
                     <div class="mt-2 text-center border-b-2 border-black py-3">
                         <h4 class="font-bold text-lg"> Operating Systems Course Teaching Assistant </h4>
                     </div>
@@ -144,7 +141,7 @@
                 </div>
             </div>
         </div>
-        <div id="decoration" class="w-full h-24 max-h-24 bg-repeat-x opacity-50 " style="background-image: url(./images/separador_1.png); background-size: contain;"></div>
+        <div id="decoration" class="w-full h-24 max-h-24 bg-repeat-x opacity-50 " style="background-image: url(./images/separador_2.png); background-size: contain;"></div>
     </section>
 
     <section id="education">
@@ -153,7 +150,7 @@
 
 
             <div class="grid grid-cols-1 lg:grid-cols-2 2xl:grid-cols-3 gap-8 w-3/4 mx-auto">
-                <div class="mx-auto my-4 rounded-sm h-full bg-custom-100 shadow-xl border-4 border-gray-700">
+                <div class="mx-auto my-4 rounded-sm h-full bg-custom-600 shadow-xl border-4 border-gray-700">
                     <div class="mt-2 text-center border-b-2 border-black py-3">
                         <h4 class="font-bold text-lg"> Computer Science Major </h4>
                     </div>
@@ -168,7 +165,7 @@
                     </div>
                 </div>
 
-                <div class="mx-auto my-4 rounded-sm h-full bg-custom-100 shadow-xl border-4 border-gray-700">
+                <div class="mx-auto my-4 rounded-sm h-full bg-custom-600 shadow-xl border-4 border-gray-700">
                     <div class="mt-2 text-center border-b-2 border-black py-3">
                         <h4 class="font-bold text-lg"> Coursera </h4>
                     </div>
@@ -234,15 +231,15 @@
     <section id="contact">
         <div class="mx-auto w-11/12">
 
-            <form action="POST" class="mx-auto my-4 rounded-sm h-full bg-custom-100 shadow-custom-1 sm:w-3/4 md:w-1/2 2xl:w-2/5 px-6 py-4">
-                <h1 class="font-bold text-4xl my-8 underline"> Contact Me </h1>
+            <div class="mx-auto my-4 rounded-sm h-full sm:w-3/4 md:w-1/2 2xl:w-2/5 px-6 py-4">
+                <h1 class="font-bold text-2xl my-8 underline"> Contact Me </h1>
 
                 <div class="w-3/4">
                     <label class="label mb-0 pt-4 pl-3 leading-tighter text-gray-900 text-base mt-2 cursor-text" for="name">Name</label>
                     <input class="input h-4 border border-gray-400 appearance-none rounded w-full px-3 py-3 pt-5 pb-2 focus focus:border-indigo-600 focus:outline-none active:outline-none active:border-indigo-600" id="name" type="text" required>
                 </div>
                 <div class="w-3/4">
-                    <label class="label mb-0 pt-4 pl-3 leading-tighter text-gray-900 text-base mt-2 cursor-text" for="email">E-Mail</label>
+                    <label class="label mb-0 pt-4 pl-3 leading-tighter text-gray-900 text-base mt-2 cursor-text" for="email">Your E-Mail</label>
                     <input class="input h-4 border border-gray-400 appearance-none rounded w-full px-3 py-3 pt-5 pb-2 focus focus:border-indigo-600 focus:outline-none active:outline-none active:border-indigo-600" id="email" type="email" required>
                 </div>
                 <div class="w-3/4">
@@ -254,8 +251,8 @@
                     <input class="input h-36 border border-gray-400 appearance-none rounded w-full px-3 py-3 pt-5 pb-2 focus focus:border-indigo-600 focus:outline-none active:outline-none active:border-indigo-600" id="message" type="text" />
                 </div>
 
-                <button class="my-4 bg-indigo-800 border-2 border-indigo-900 hover:bg-blue-dark text-white font-bold py-3 px-6 rounded w-1/2 md:w-1/4 h-3/5">Submit</button>
-            </form>
+                <button class="my-4 bg-custom-900 border-2 border-custom-100 hover:bg-blue-dark text-gray-900 font-bold py-3 px-6 rounded w-1/2 md:w-1/4 h-3/5" onclick="sendEmail()">Submit</button>
+            </div>
         </div>
     </section>
 
