--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Welcome</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <meta name="description" content="Miguel Hincapié's Software Developer Portfolio, focused primarily in full stack web development">
-    <link rel='stylesheet' type='text/css' media='screen' href='./css/style.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='./css/style.min.css'>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <script src='./js/main.js'></script>
